# justmytype

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  manifest.md
src/justmytype/: __init__.py  cli.py  core.py  font_catalog.py  matcher.py  parser.py  types.py
src/justmytype/packs/: __init__.py  base.py  darwin.py  factory.py  linux.py  windows.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_font_catalog.py  test_matcher.py  test_packs.py  test_parser.py  test_types.py  test_w3c_font_resolution.py
tests/pack_fixture/: __init__.py
tests/pack_fixture/fonts/: pack_manifest.json
